# pole-placement-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: example.cpp
include/pole_placement/: pole_placement.hpp  pole_placement.py
